[project]
name = "burrow-mcp"
version = "0.1.0"
description = "A Python-based home automation system with MCP interface for Claude integration"
requires-python = ">=3.11"
dependencies = [
    "mcp",                    # MCP SDK
    "lifxlan",                # LIFX local control
    "tinytuya",               # Tuya local control
    "yalexs",                 # August locks
    "roombapy",               # Roomba local MQTT control
    "irbt",                   # Roomba cloud API (newer models)
    "ring-doorbell",          # Ring (optional, low priority)
    "pyatv",                  # AppleTV control for media/recommendations
    "pyyaml",                 # Config
    "pydantic",               # Data validation
    "aiosqlite",              # Async state persistence
    "httpx",                  # Async HTTP for APIs
    "aiomqtt",                # MQTT for presence sensors
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff"]
discovery = ["zeroconf"]      # Better network discovery

[project.scripts]
burrow = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "config/*.example"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 30
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
